<resources>
    <string name="app_name">Messenger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgotten password?</string>
    <string name="or">or</string>
    <string name="create_new_account">Create new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="complete_your_profile">Verify your Phone Number</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="verification_link_has_been_sent_to">Verification link has been sent to</string>
    <string name="_30">30</string>
    <string name="seconds">seconds</string>

    <string name="resend_code">Resend code</string>
    <string name="verification_code">Verification Code</string>
    <string name="sample_email">XXXXXX@XXXXX.com</string>
    <string name="email_not_now">I have verified my Email</string>
    <string name="profile_not_now">Not now</string>

    <string name="you_can_resend_link_after">You can resend link after</string>
    <string name="verify_later">Verify later</string>
    <string name="select_country">Select country</string>
    <string name="country">Country</string>
    <string name="browse">Browse</string>
    <string name="profile_picture_imageview">Profile Picture Imageview</string>
    <string name="storage_write_permission_required">Storage write access is required save image</string>
    <string name="storage_read_permission_required">Storage read access is required to pick a profile picture</string>
    <string name="camera_permission_required">Camera access is required to take a profile picture</string>
    <string name="record_audio_permission_required">Audio Record permission is required</string>
    <string name="hold_to_record">Hold the mic button to record Audio</string>
    <string name="ok">OK</string>
    <string name="permission_required">Permission Required</string>
    <string name="camera_permission_granted">Camera permission is granted</string>
    <string name="storage_permission_granted">Storage permission is granted</string>
    <string name="select_gender">Select your gender</string>
    <string name="id_retrieval_failed">Failed to retrieve user ID</string>
    <string name="too_young">You are not old enough to register</string>
    <string name="email_verification_sent">Verification link has been sent</string>
    <string name="email_not_verified">Email is not verified</string>
    <string name="email_verification_failed_err">Email Verification failed with error : %s</string>
    <string name="upload_img_err">Error uploading Image, please try again</string>
    <string name="upload_img_cancel">Image upload process canceled, please try again</string>
    <string name="upload_img_success">Image uploaded successfully</string>
    <string name="submit">Submit</string>

    <string name="account_not_found">The email address you entered isn\'t connected to an account</string>
    <string name="account_invalid_password">The password that you\'ve entered is incorrect</string>
    <string name="chat_avatar">chat_avatar</string>
    <string name="search">Search</string>
    <string name="empty_conversation">Start the conversation by saying Hi!</string>
    <string name="start_chat">start Chat</string>
    <string name="add_a_friend_to_start_a_conversation">Add a friend to start a conversation</string>
    <string name="add_friend_icon">Add Friend Icon</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="your_friends_will_show_here">Your friends will show here</string>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="years">
        <item>1904</item>
        <item>1905</item>
        <item>1906</item>
        <item>1907</item>
        <item>1908</item>
        <item>1909</item>
        <item>1910</item>
        <item>1911</item>
        <item>1912</item>
        <item>1913</item>
        <item>1914</item>
        <item>1915</item>
        <item>1916</item>
        <item>1917</item>
        <item>1918</item>
        <item>1919</item>
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="option">option</string>
    <string name="select_image_to_send">select Image to send</string>
    <string name="type_a_message">Message</string>
    <string name="send_message">send message</string>
    <string name="sender_user_icon">Sender User Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_image">Send Image</string>
    <string name="cancel">Cancel</string>
    <string name="selected_image_to_send">Selected image to send</string>
    <string name="send_picture_floating_action_button">Send Picture Floating Action Button</string>
    <string name="image_message">Image Message</string>
    <string name="copy_text">Copy</string>
    <string name="delete_message">Delete</string>
    <string name="save_image">Save</string>
    <string name="back">back</string>
    <string name="more_options">more options</string>
    <string name="message_image">Message Image</string>
    <string name="you">You</string>
    <string name="record_audio">Record Audio</string>
    <string name="send">Send</string>
    <string name="attachments">Attachments</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="friend_info">Friend Info</string>
    <string name="play_pause_recording">play pause recording</string>
    <string name="time_separator">/</string>
    <string name="no_duration">00:00</string>
</resources>