<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.example.messenger.verifyEmail.EmailVerificationViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3790EA"
        tools:context=".register.RegisterFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/greeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:verifyFirstName="@{viewModel.currentProfile.fname}"
                        app:verifyLastName="@{viewModel.currentProfile.lname}"
                        tools:text="Hello XXX XXX\nPlease verify your Email Address" />


                    <TextView
                        android:id="@+id/otp_sent_Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/greeting"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/verification_link_has_been_sent_to"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/otp_sent_Tv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="20dp"
                        android:text="@{viewModel.currentProfile.email}"
                        android:textColor="@color/black"
                        android:textColorHint="#78909C"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        tools:hint="@string/sample_email" />

                    <TextView
                        android:id="@+id/resend_code_Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/email_tv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/you_can_resend_link_after"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/resend_code_Tv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="@string/_30" />

                    <TextView
                        android:id="@+id/secs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/counter"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/seconds"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/resend_code_btn"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/secs"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:enabled="false"
                        android:text="@string/resend_code" />


                    <Button
                        android:id="@+id/verification_done_btn"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/secs"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@id/resend_code_btn"
                        android:text="@string/email_not_now"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/verify_later_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/resend_code_btn"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/verify_later"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </RelativeLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>