<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.messenger.login.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3790EA"
        tools:context=".login.LoginFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/login_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/login"
                        android:textSize="35sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_tv"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_text_input_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/email_text_input_layout"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/password">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_text_input_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:textColorHint="#616161"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/password_text_input_layout"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="25dp"
                        android:text="@string/login" />

                    <TextView
                        android:id="@+id/forgot_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_button"
                        android:layout_centerHorizontal="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:text="@string/forgot_your_password"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/forgot_tv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/or"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/or"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="25dp"
                        android:backgroundTint="#088828"
                        android:text="@string/create_new_account" />

                </RelativeLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>