<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.example.messenger.completeProfile.CompleteProfileViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3790EA"
        tools:context=".register.RegisterFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/greeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:completeFirstName="@{viewModel.currentProfile.fname}"
                        tools:text="XXX\nPlease complete your profile by adding a profile picture" />


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_below="@id/greeting"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/profile_picture_imageview"
                        android:maxWidth="250dp"
                        android:maxHeight="250dp"
                        android:src="@drawable/ic_avatar_foreground"
                        tools:ignore="ImageContrastCheck" />


                    <ProgressBar
                        android:id="@+id/progress_circular"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_below="@id/greeting"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginEnd="20dp"
                        android:indeterminateDrawable="@drawable/progress_sample2"
                        android:visibility="invisible" />


                    <LinearLayout
                        android:id="@+id/linear"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/browse_picture_button"
                            style="?android:attr/buttonStyle"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="13dp"
                            android:text="@string/browse"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/submit_picture_btn"
                            style="?android:attr/buttonStyle"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="13dp"
                            android:layout_marginEnd="5dp"
                            android:enabled="false"
                            android:text="@string/submit"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <Button
                        android:id="@+id/complete_later_button"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/linear"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/profile_not_now"
                        android:textSize="15sp" />
                </RelativeLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>